5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1836_1279.log
== SUBMITION (2019-07-01 23:12:50) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont =0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
    if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
    elif x == 'D':
        xtab = xtab+1
    # Move personagem para CIMA
    elif x == 'W':
        ytab = 
    # Move personagem para BAIXO
    elif x == 'S':
        ytab = 

    # Trata evento
    # Moeda
    if tabuleiro[ytab,xtab] == 11:
        moeda = 
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
        life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- EXECUTION TIME:
0.725472
-- ERROR:
  File "/home/codebench/codes/1836/1279/main.py", line 32
    ytab = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:14:01) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont =0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
    if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
    elif x == 'D':
        xtab = xtab+1
    # Move personagem para CIMA
    elif x == 'W':
        ytab = 
    # Move personagem para BAIXO
    elif x == 'S':
        ytab = ytab+1

    # Trata evento
    # Moeda
    if tabuleiro[ytab,xtab] == 11:
        cont = cont+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
        life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- EXECUTION TIME:
0.782799
-- ERROR:
  File "/home/codebench/codes/1836/1279/main.py", line 32
    ytab = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:14:08) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont =0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
    if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
    elif x == 'D':
        xtab = xtab+1
    # Move personagem para CIMA
    elif x == 'W':
        ytab = 
    # Move personagem para BAIXO
    elif x == 'S':
        ytab = ytab+1

    # Trata evento
    # Moeda
    if tabuleiro[ytab,xtab] == 11:
        cont = cont+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
        life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- EXECUTION TIME:
0.680958
-- ERROR:
  File "/home/codebench/codes/1836/1279/main.py", line 32
    ytab = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
